Fix square text readability in background section

--- a/src/style.styl
+++ b/src/style.styl
@@ -20,9 +20,6 @@ html
   align-items center
   padding 2rem
 
-  .dark
-    color #222
-
   .squares-256
     margin 0 auto
     width 36rem
@@ -45,6 +42,9 @@ html
 @media screen and (max-width: 36rem)
   #splash .squares-256 .six-squares-6x6
     width: 100%;
+
+.dark-text
+  color #222
 
 header
   background #111
@@ -198,10 +198,6 @@ section
   &.color-text
     letter-spacing -1px
     background #1f1f1f
-
-section#background-colors
-  .square
-    color #2c3e50
 
 section#xterm-color-codes.example
   background #333
